--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -506,7 +506,7 @@ fontdue-type-testers {
 
 
 @media (max-width: 899px) {
-  fontdue-type-testers .type-tester {
+  .type-tester {
     --type-tester--adjustment: 1;
   }
 }
