--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -304,8 +304,8 @@ header .logo { /* Floating left box with logo */
 header .familyName { /* Floating left box with current family name */
     display: block;
     float: left;
-    text-align: center;
-    padding:15px;
+    font-size: 40px;
+    text-align: left;
 }
 header .logo img {
     height: 50px;
@@ -335,10 +335,7 @@ header .navbar a {
 .hamburger {
     display: none;
     font-size: 30px;
-    padding: 5px;
-    margin-right: 20px;
     cursor: pointer;
-    float:right;
 }
 
 /* Slideshow */
@@ -424,17 +421,16 @@ div.image {
 
 /* Layout for Rows and Columns */
 .row {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    /*margin: 20px 0;*/
 }
 .column {
-    flex: 1 1 50%;
+    flex: 1;
     width: 50%;
-    min-width: 300px; 
+    /*padding: 10px;*/
     box-sizing: border-box;
     background-color: #F0F0F0;
 }
-
 .column p {
     /*background-color: #f9f9f9;*/
     /*padding: 20px;*/
@@ -477,26 +473,24 @@ fontdue-type-testers {
     header .navbar {
         display: none;
     }
-    .hamburger { 
+    .hamburger {
         display: block;
     }
-      .row {
-        flex-direction: column;
-      }
     .column {
         flex: 1;
         width: 100vw;
         box-sizing: border-box;
         background-color: #F0F0F0;
     }
+
     .navbar.active {
         display: block;
         position: absolute;
-        background-color: gray;
-        width: 100vw;
-        margin-top: 70px;
+        background-color: #333;
+        width: 30%;
+        box-align: 'right';
+        top: 60px;
     }
-
     .navbar ul {
         flex-direction: column;
     }
@@ -509,6 +503,7 @@ fontdue-type-testers {
       margin-left:0px;
       width: 100%;
       max-width: 100%;
+      border-radius: 0px;
     }
 
     div.image {
