--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,9 +1,3 @@
-/* GENERAL ATTRIBUTES */
-
-@view-transition {
-  navigation: auto;
-}
-
 /* Reset */
 
 h1, h2, h3, h4, h5, h6 {
@@ -22,15 +16,10 @@ body {
 header {
     display: block;
     height: 50px;
-    width:100vw;
+    /*justify-content: space-between;*/
     padding: 10px;
     background-color: black;
     color: white;
-    top: 0px;
-    left: 0px;
-    position: fixed;
-    z-index: 100;
-    border-bottom: 1px solid;
 }
 
 /* Font stuff */
@@ -294,8 +283,6 @@ header {
 
 /* Header logo */
 
-header{
-}
 header .logo { /* Floating left box with logo */
     display: block;
     float: left;
@@ -316,7 +303,6 @@ header .logo img {
 header .navbar {
     display: block;
     float: right;
-    padding:15px;
 }
 header .navbar ul {
     list-style-type: none;
@@ -331,7 +317,6 @@ header .navbar a {
     color: white;
     text-decoration: none;
 }
-
 .hamburger {
     display: none;
     font-size: 30px;
@@ -476,13 +461,9 @@ fontdue-type-testers {
     .hamburger {
         display: block;
     }
-    .column {
-        flex: 1;
-        width: 100vw;
-        box-sizing: border-box;
-        background-color: #F0F0F0;
+    .row {
+        flex-direction: column;
     }
-
     .navbar.active {
         display: block;
         position: absolute;
@@ -499,7 +480,7 @@ fontdue-type-testers {
     }
 
     .popup-content {
-      margin-top: 70px;
+      margin-top:70px;
       margin-left:0px;
       width: 100%;
       max-width: 100%;
