Works again from Tom's commit

--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -503,4 +503,7 @@ fontdue-type-testers {
     }
 
 }
-
+@media (max-width: 899px) {
+  fontdue-type-testers .type-tester {
+    --type-tester--adjustment: 1;
+  }
