--- a/templates/css/styles-jasper.css
+++ b/templates/css/styles-jasper.css
@@ -1,3 +1,9 @@
+/* GENERAL ATTRIBUTES */
+
+@view-transition {
+  navigation: auto;
+}
+
 /* Reset */
 
 h1, h2, h3, h4, h5, h6 {
@@ -16,10 +22,15 @@ body {
 header {
     display: block;
     height: 50px;
-    /*justify-content: space-between;*/
+    width:100vw;
     padding: 10px;
     background-color: black;
     color: white;
+    top: 0px;
+    left: 0px;
+    position: fixed;
+    z-index: 100;
+    border-bottom: 1px solid;
 }
 
 /* Font stuff */
@@ -283,6 +294,8 @@ header {
 
 /* Header logo */
 
+header{
+}
 header .logo { /* Floating left box with logo */
     display: block;
     float: left;
@@ -291,8 +304,8 @@ header .logo { /* Floating left box with logo */
 header .familyName { /* Floating left box with current family name */
     display: block;
     float: left;
-    font-size: 40px;
-    text-align: left;
+    text-align: center;
+    padding:15px;
 }
 header .logo img {
     height: 50px;
@@ -303,6 +316,7 @@ header .logo img {
 header .navbar {
     display: block;
     float: right;
+    padding:15px;
 }
 header .navbar ul {
     list-style-type: none;
@@ -317,10 +331,14 @@ header .navbar a {
     color: white;
     text-decoration: none;
 }
+
 .hamburger {
     display: none;
     font-size: 30px;
+    padding: 5px;
+    margin-right: 20px;
     cursor: pointer;
+    float:right;
 }
 
 /* Slideshow */
@@ -406,16 +424,17 @@ div.image {
 
 /* Layout for Rows and Columns */
 .row {
-    display: flex;
-    /*margin: 20px 0;*/
+  display: flex;
+  flex-wrap: wrap;
 }
 .column {
-    flex: 1;
+    flex: 1 1 50%;
     width: 50%;
-    /*padding: 10px;*/
+    min-width: 300px; 
     box-sizing: border-box;
     background-color: #F0F0F0;
 }
+
 .column p {
     /*background-color: #f9f9f9;*/
     /*padding: 20px;*/
@@ -458,20 +477,26 @@ fontdue-type-testers {
     header .navbar {
         display: none;
     }
-    .hamburger {
+    .hamburger { 
         display: block;
     }
-    .row {
+      .row {
         flex-direction: column;
+      }
+    .column {
+        flex: 1;
+        width: 100vw;
+        box-sizing: border-box;
+        background-color: #F0F0F0;
     }
     .navbar.active {
         display: block;
         position: absolute;
-        background-color: #333;
-        width: 30%;
-        box-align: 'right';
-        top: 60px;
+        background-color: gray;
+        width: 100vw;
+        margin-top: 70px;
     }
+
     .navbar ul {
         flex-direction: column;
     }
@@ -480,11 +505,10 @@ fontdue-type-testers {
     }
 
     .popup-content {
-      margin-top:70px;
+      margin-top: 70px;
       margin-left:0px;
       width: 100%;
       max-width: 100%;
-      border-radius: 0px;
     }
 
     div.image {
@@ -503,7 +527,10 @@ fontdue-type-testers {
     }
 
 }
+
+
 @media (max-width: 899px) {
-  fontdue-type-testers .type-tester {
+  .type-tester {
     --type-tester--adjustment: 1;
   }
+}
