--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -384,7 +384,7 @@ div.image {
 }
 
 .popup-content {
-  background-color: #fff;
+  background-color: #282828;
   margin-top: 70px;
   margin-left:30%;
   padding: 20px;
@@ -393,6 +393,15 @@ div.image {
   border-radius: 5px;
   position: relative;
 }
+
+.popup-content .column {
+  background-color: #282828;    
+}
+
+.popup-content .column a {
+  color: white;    
+}
+
 
 .close {
   position: absolute;
