--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -16,10 +16,13 @@ body {
 header {
     display: block;
     height: 50px;
-    /*justify-content: space-between;*/
     padding: 10px;
     background-color: black;
     color: white;
+    border-bottom: 1px white solid;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
 }
 
 /* Font stuff */
@@ -303,6 +306,7 @@ header .logo img {
 header .navbar {
     display: block;
     float: right;
+    padding: 17px;
 }
 header .navbar ul {
     list-style-type: none;
@@ -321,6 +325,9 @@ header .navbar a {
     display: none;
     font-size: 30px;
     cursor: pointer;
+    float: right;
+    padding: 10px;
+    padding-right: 20px;
 }
 
 /* Slideshow */
