--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -25,6 +25,29 @@ header {
     width: 100%;
 }
 
+/* Animation */
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
 /* Font stuff */
 .presti { 
     font-family: "Presti Text Normal";    
@@ -307,6 +330,7 @@ header .navbar {
     display: block;
     float: right;
     padding: 17px;
+    animation: slideLeft 0.2s ease-out forwards;
 }
 header .navbar ul {
     list-style-type: none;
@@ -399,6 +423,8 @@ div.image {
   max-width: 300px;
   border-radius: 5px;
   position: relative;
+  animation: slideDown 0.2s ease-out forwards;
+  z-index: 80;
 }
 
 .popup-content .column {
@@ -484,9 +510,11 @@ fontdue-type-testers {
         display: block;
         position: absolute;
         background-color: #333;
-        width: 30%;
+        width: 100%;
         box-align: 'right';
-        top: 60px;
+        top: 70px;
+        z-index: 50;
+        margin-left: -10px
     }
     .navbar ul {
         flex-direction: column;
