--- a/templates/index.html
+++ b/templates/index.html
@@ -126,7 +126,8 @@
         <div class="familyName upgrade" onclick="document.getElementById('popup').style.display='block'">
             Select a family
         </div>
-        <nav class="navbar">
+        <nav id="navbar" class="navbar">
+            <span class="close" onclick="document.getElementById('navbar').style.display='none'">&times;</span>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
