Typetester of Presti large name on index

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
     <!-- Presti VF -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw%3D%3D.css" rel="stylesheet">  
     
+    <!-- Presti Display -->
+    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MDM2NDg2NzUyOTI5OA%3D%3D.css" rel="stylesheet">
+
     <!-- Presti Deck -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">  
     
@@ -190,7 +193,7 @@
 
     <section class="content">
         <div class="row type-tester">
-            <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ3OTc4MjM2MjU4OTc3Nw=="></fontdue-type-testers>
+            <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ4MDM2NDg2NzUyOTI5OA=="></fontdue-type-testers>
         </div>
 
         <div class="row">
