--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -16,10 +16,36 @@ body {
 header {
     display: block;
     height: 50px;
-    /*justify-content: space-between;*/
     padding: 10px;
     background-color: black;
     color: white;
+    border-bottom: 1px white solid;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+}
+
+/* Animation */
+@keyframes slideDown {
+  0% {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
 
 /* Font stuff */
@@ -303,6 +329,8 @@ header .logo img {
 header .navbar {
     display: block;
     float: right;
+    padding: 17px;
+    animation: slideLeft 0.2s ease-out forwards;
 }
 header .navbar ul {
     list-style-type: none;
@@ -321,6 +349,9 @@ header .navbar a {
     display: none;
     font-size: 30px;
     cursor: pointer;
+    float: right;
+    padding: 10px;
+    padding-right: 20px;
 }
 
 /* Slideshow */
@@ -384,7 +415,7 @@ div.image {
 }
 
 .popup-content {
-  background-color: #fff;
+  background-color: #282828;
   margin-top: 70px;
   margin-left:30%;
   padding: 20px;
@@ -392,7 +423,18 @@ div.image {
   max-width: 300px;
   border-radius: 5px;
   position: relative;
+  animation: slideDown 0.2s ease-out forwards;
+  z-index: 80;
 }
+
+.popup-content .column {
+  background-color: #282828;    
+}
+
+.popup-content .column a {
+  color: white;    
+}
+
 
 .close {
   position: absolute;
@@ -468,9 +510,11 @@ fontdue-type-testers {
         display: block;
         position: absolute;
         background-color: #333;
-        width: 30%;
+        width: 100%;
         box-align: 'right';
-        top: 60px;
+        top: 70px;
+        z-index: 50;
+        margin-left: -10px
     }
     .navbar ul {
         flex-direction: column;
