--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1,3 +1,18 @@
+/* Auto scroll snap */
+
+@view-transition {
+  navigation: auto;
+}
+
+.row, .column {
+  scroll-snap-align: start; 
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
+}
+
 /* Reset */
 
 h1, h2, h3, h4, h5, h6 {
@@ -358,6 +373,7 @@ header .navbar a {
 /* Slideshow */
 
 .slideshow {
+    top:70px;
     width: 100%;
     height: 500px;
     position: relative;
