--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -459,7 +459,7 @@ div.image {
   right: 15px;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: white;
   cursor: pointer;
 }
 
@@ -467,7 +467,6 @@ div.image {
 .row {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px; 
 }
 
 .column {
