--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,10 @@
         <div class="familyName upgrade" onclick="document.getElementById('popup').style.display='block'">
             Select a family
         </div>
+        <div class="fontIcon" onclick="document.getElementById('popup').style.display='block'">
+            F
+        </div>
+
         <nav id="navbar" class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
