--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
             Select a family
         </div>
         <div class="fontIcon" onclick="document.getElementById('popup').style.display='block'">
-            F
+            Select
         </div>
 
         <nav id="navbar" class="navbar">
