--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -24,10 +24,18 @@ h1, h2, h3, h4, h5, h6 {
 /* General Styles */
 
 body {
-    font-family: "Upgrade Regular", sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: "Upgrade Regular", sans-serif; 
+  margin: 0;
+  padding: 0;
+  scroll-behavior: auto;
+  background-color: white;
+  width: 100vw;
+  overflow-x: hidden;
+  line-height: 1;
+  -webkit-text-size-adjust: none;
 }
+
+
 header {
     display: block;
     height: 50px;
@@ -362,10 +370,10 @@ header .navbar a {
     text-decoration: none;
 }
 .hamburger {
+    display: none;
     position: absolute;
     top:0px;
     right:0px;
-    display: none;
     font-size: 30px;
     cursor: pointer;
     float: right;
@@ -375,7 +383,7 @@ header .navbar a {
 
 .fontIcon {
     display: none;
-    font-size: 30px;
+    font-size: 37px;
     cursor: pointer;
     padding: 10px;
     padding-right: 20px;
@@ -384,7 +392,6 @@ header .navbar a {
 /* Slideshow */
 
 .slideshow {
-    top:70px;
     width: 100%;
     height: 500px;
     position: relative;
@@ -592,3 +599,9 @@ fontdue-type-testers {
   fontdue-type-testers .type-tester {
     --type-tester--adjustment: 1;
   }
+}
+
+div.type-tester {
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
