--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
         <div class="familyName upgrade" onclick="document.getElementById('popup').style.display='block'">
             Select a family
         </div>
-        <div class="fontIcon" onclick="document.getElementById('popup').style.display='block'">
+        <div class="fontIcon upgrade" onclick="document.getElementById('popup').style.display='block'">
             Select
         </div>
 
