--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -393,6 +393,7 @@ header .navbar a {
 /* Slideshow */
 
 .slideshow {
+    padding-top: 60px;
     width: 100%;
     height: 500px;
     position: relative;
@@ -484,8 +485,8 @@ div.image {
 
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .column {
@@ -550,6 +551,12 @@ fontdue-type-testers {
     .column {
         width: 100%;
     }
+
+    .column p, .column h1{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
     .navbar.active {
         display: block;
         position: absolute;
@@ -581,6 +588,9 @@ fontdue-type-testers {
         position: float;
         width: 100%;
         padding: 0;
+      padding-top: 56.25%; 
+      background-size: cover;
+      background-position: center;
     }
 
     div.responsiveHide, div.familyName {
