--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -89,7 +89,9 @@ header {
     font-weight: 400;
     letter-spacing: 0.02em;
 }
-
+.presti p {
+    line-height: 1.3em;
+}
 
 .productus {
     font-family: "Productus Book";
@@ -97,6 +99,7 @@ header {
 }
 .productus p {
     letter-spacing: 0.04em;
+    line-height: 1.3em;
 }
 .productus-bold {
     font-family: "Productus Bold";
@@ -104,6 +107,7 @@ header {
 }
 .productus-bold p {
     letter-spacing: 0.04em;
+    line-height: 1.3em;
 }
 
 .proforma {
@@ -112,20 +116,23 @@ header {
 }
 .proforma p {
     letter-spacing: 0.02em;
+    line-height: 1.3em;
 }
 .proforma-book {
     font-family: "Proforma Book";
     font-weight: 400;
 }
 .proforma-book p {
-    letter-spacing: 0.02em;
+    letter-spacing: 0.015em;
+    line-height: 1.3em;
 }
 .proforma-bold {
     font-family: "Proforma Bold";
     font-weight: 400;
 }
 .proforma-bold p {
-    letter-spacing: 0.02em;
+    letter-spacing: 0.015em;
+    line-height: 1.3em;
 }
 .proforma-pro {
     font-family: "TP Proforma Pro Regular";
@@ -151,11 +158,15 @@ header {
 .powerlift {
     font-family: "PowerLift Tight";    
     font-weight: 400;
+}
+.powerlift p {
     line-height: 1em; 
 }
 .powerlift-outline {
     font-family: "PowerLift Tight Outline";    
     font-weight: 400;
+}
+.powerlift-outline p {
     line-height: 1em; 
 }
 
@@ -168,11 +179,14 @@ header {
     font-family: "Responder P VF Regular";
     font-variation-settings: 'ital': 0, 'wght': 600;
 }
-
+.responder-p p {
+    line-height: 1.3em;
+}
 .responder-m {
     font-family: "Responder M Regular Italic";
     font-style: normal;
     font-weight: 400;
+    line-height: 1.3em;
 }
 
 .upgrade {
@@ -185,10 +199,16 @@ header {
     font-weight: 400;
     letter-spacing: 0.02em;
 }
+.upgrade p {
+    line-height: 1.3em;
+}
 
 .bitcount {
     font-family: "Bitcount Mono Double Regular Circle";
     font-weight: 400;
+}
+.bitcount p {
+    line-height: 1.3em;
 }
 
 .size24 {
