--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,6 @@
         </div>
     </header>
 
-    <!--
     <section class="slideshow">
         <div class="slide active" style="background-image: url('images/2023/Upgrade-20230326 UP Coffee cups colors.jpg');"></div>
         <div class="slide" style="background-image: url('images/2023/Bitcount-202302 - BIT in use - Lets talk_01.jpg');"></div>
@@ -156,7 +155,6 @@
         <div class="slide" style="background-image: url('images/2023/Upgrade-202302 - UP in use - Take your bag.jpg');"></div>
         <div class="slide" style="background-image: url('images/2025/Responder-M-Mercator-Handwriting2.png');"></div>
     </section>
-    -->
 
     <!--
     <section class="content">
@@ -181,7 +179,7 @@
         <span class="close" onclick="document.getElementById('popup').style.display='none'">&times;</span>
         <section class="content">
           <div class="row">
-            <div class="column font-selector size36">
+            <div class="column font-selector size36 leading14">
               <p class="presti"><a href="presti.html">Presti&nbsp;</a></p> 
               <p class="productus"><a href="productus.html">Productus</a></p> 
               <p class="powerlift-outline"><a href="powerlift.html">PowerLift</a></p> 
