--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -214,6 +214,7 @@ header {
 .leading14 {
     line-height: 1.4em;
 }
+
 .size24 {
     font-size: 24px;
 }
@@ -370,7 +371,9 @@ header .familyName { /* Floating left box with current family name */
     float: left;
     font-size: 40px;
     text-align: left;
-    padding-top: 0.10em;
+    /* padding-top: 0.12em; */
+    transform: translateY(calc(0.105em)); /* shift so baseline hits 50px */
+
 }
 header .logo img {
     height: 50px;
