--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="icon" type="image/x-icon" href="images/logos/typetr.ico">
 
     {{googleMetaData}}
     <!--
@@ -221,7 +217,7 @@
         </div>
 
         <div class="row type-tester">
-            <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ4MDM2NDg2NzUyOTI5OA=="></fontdue-type-testers>
+            <fontdue-type-testers collection-slug="tp-presti"></fontdue-type-testers>
         </div>
 
         <div class="row">
